# cpp-practice

./: .gitignore  01.c cpp运行时原理.md  02.原生mingw64编译工具.md  03.vscode集成cpp开发环境.md  04.vscode集成cmake构建工具.md  04.原生cmake构建工具.md  05.vscode远程ssh开发模式.md  06.jetbrains clion集成开发环境.md  07.cmake集成ninja构建工具.md  CMakeLists.txt  CMakePresets.json  main.cpp  readme.md
src/: main.cpp  other.cpp  sum.cpp
